# Bagel

./: .gitignore  ACCOUNT_REORDER_STATUS.md  ARCIUM_BUILD_ISSUE.md  ARCIUM_BUILD_STATUS.md  ARCIUM_CALLBACK_IX_FIX.md  ARCIUM_CIRCUIT_DEPLOYMENT.md  ARCIUM_COMPLETE.md  ARCIUM_FIX_2_FINAL_STATUS.md  ARCIUM_FIX_2_STATUS.md  ARCIUM_FIX_5_FINAL_BLOCKER.md  ARCIUM_INTEGRATION_REPORT.md  ARCIUM_MPC_IMPLEMENTATION_STATUS.md  Anchor.toml  Arcium.toml  BAGEL_SPEC.md  BUILD_SUCCESS.md  CIRCUIT_ID_UPDATE.md  CLI_DEPLOYMENT_GUIDE.md  COMPREHENSIVE_PRIVACY_LAYERS_REPORT.md  CONFIDENTIAL_TOKEN_E2E_TEST_REPORT.md  CONFIDENTIAL_TOKEN_PRIVACY_VERIFICATION.md  CONFIDENTIAL_TOKEN_TEST_RESULTS.md  CONTRIBUTING.md  CURRENT_IMPORTS.md  CURRENT_STATUS.md  Cargo.toml  Cursor_Skills_Pack_Arcium_v0.6.x.md  DEMO_SCRIPT.md  DEPLOYMENT_READY.md  DEPLOY_NOW.md  DEVELOPMENT.md  DE_MOCKING_COMPLETE.md  DE_MOCKING_FINAL.md  DE_MOCKING_IMPLEMENTATION.md  DIAGNOSIS_INFO.md  E2E_FULLY_VERIFIED.md  E2E_TEST_BLOCKERS.md  E2E_TEST_RESULTS.md  EXACT_ERROR_STATE.md  FINAL_BLOCKER_REPORT.md  (+81 more)
.archive/: README.md
.archive/integration-docs/: ALL_INTEGRATIONS_COMPLETE.md  PRIVACY_SDK_INTEGRATION.md
.archive/status-reports/: ARCIUM_IMPLEMENTATION_COMPLETE.md  ARCIUM_INTEGRATION.md  ARCIUM_STATUS_FINAL.md  ARCIUM_V051_MIGRATION.md  DEPLOYED.md  FIXES_APPLIED.md  PHASE3_KICKOFF.md
.cursor/: README.md
.cursor/rules/: 00-bagel-master.md  00-bagel-master.mdc  01-architect.md  02-backend-privacy.md  03-backend-payouts.md  04-frontend-bagel.md  05-infrastructure.md  06-security.md
.cursor/skills/: privacy-sdk-resources.md  solana-best-practices.md  solana-installation.md  solana-programs.md
Context/: 00-LEAN-STRATEGY.md  01-HELIUS.md  02-RANGE.md  03-INCO.md  04-MAGICBLOCK.md  05-SHADOWWIRE.md  06-DEMO-CHECKLIST.md  07-NETWORK-STATUS.md
app/: .env.local.example  README.md  next.config.js  package.json  tailwind.config.js  test-real-sdks.mjs  test-shadowwire-real.mjs  tsconfig.json
app/components/: InteractiveGuide.tsx  NetworkSwitchGuide.tsx  NetworkWarning.tsx  PayrollSection.tsx
app/components/ui/: crypto-distribution-chart.tsx  holo-pulse-loader.tsx  scroll-morph-hero.tsx
app/hooks/: useBagel.ts  useTransactions.ts
app/lib/: README.md  api.ts  arcium.ts  bagel-client.ts  explorer.ts  helius.ts  inco.ts  magicblock.ts  payroll-client.ts  privacycash.ts  range.ts  shadowwire-addon.ts  shadowwire.ts  transaction-utils.ts
app/pages/: _app.tsx  dashboard.tsx  dashboard.tsx.bak  employee.tsx  employees.tsx  employer.tsx  history.tsx  index.tsx  landing.tsx  privacy-audit.tsx  reports.tsx  send.tsx  terms.tsx  vault.tsx  wallets.tsx
app/pages/api/: mint.ts  setup-allowance.ts  setup-employee-allowance.ts  transfer.ts
app/styles/: globals.css
artifacts/: circuits_hash.txt
docs/: ARCHITECTURE.md  REAL_TRANSACTIONS_GUIDE.md
docs-site/: docusaurus.config.js  package.json  sidebars.js
docs-site/.docusaurus/: client-modules.js  docusaurus.config.mjs  registry.js  routes.js
docs-site/.docusaurus/@easyops-cn/docusaurus-search-local/default/: generated.js
docs-site/docs/: faq.md  getting-started.md  installation.md  intro.md  security.md  troubleshooting.md  usage-basics.md
docs-site/docs/architecture/: accounts.md  data-flow.md  instructions.md  mathematics.md  modules.md  overview.md
docs-site/docs/core-concepts/: confidential-tokens.md  fhe-encryption.md  glossary.md  payroll-jar.md  payroll-streaming.md  privacy-layer.md  yield-generation.md
docs-site/docs/integration/: confidential-tokens.md  helius-rpc.md  inco-lightning.md  magicblock-tee.md  orbmarkets-scan.md
docs-site/docs/payroll-program/: accounts.md  employee-lifecycle.md  instructions.md  overview.md  vault-integration.md
docs-site/docs/reference/: error-codes.md  events.md  program-api.md  program.md  typescript-client.md  typescript-sdk.md
docs-site/src/css/: custom.css
docs-site/src/pages/: index.js
encrypted-ixs/: Cargo.toml
encrypted-ixs/circuits/: payroll.arcis
encrypted-ixs/src/: lib.rs
programs/bagel/: Cargo.toml
programs/bagel/circuits/: payroll.arcis
programs/bagel/src/: arcium_callback_builder.rs  constants.rs  error.rs  lib.rs  test_minimal_arcium.rs
programs/bagel/src/instructions/: bake_payroll.rs  claim_excess_dough.rs  close_jar.rs  deposit_dough.rs  finalize_get_dough_from_mpc_callback.rs  get_dough.rs  mod.rs  queue_get_dough_mpc.rs  queue_get_dough_mpc_impl.rs  update_salary.rs
programs/bagel/src/privacy/: arcium.rs  inco.rs  kamino.rs  magicblock.rs  mod.rs  mpc_output.rs  privacycash.rs  shadowwire.rs
programs/bagel/src/state/: mod.rs
programs/payroll/: Cargo.toml
programs/payroll/src/: lib.rs
scripts/: README.md  check-allowance.ts  check-master-vault.ts  close-old-vault.mjs  configure-bagel-confidential.mjs  configure-mint-new.mjs  create-new-mint.ts  create-vault-token-account.ts  debug-payroll-accounts.ts  deploy-arcium-circuit.sh  deploy-arcium-cli.sh  deploy-confidential-mint.sh  deploy-confidential-payroll.sh  deploy-mainnet.sh  find-business-by-vault.ts  find-wallet-from-inco.ts  init-new-vault.mjs  init-vault-token-account.mjs  initialize-confidential-accounts.mjs  initialize-usdbagel-mint.mjs  list-all-businesses.ts  migrate-vault.mjs  repro-deposit.ts  setup-allowance-sdk.ts  test-manual-withdraw.ts  test-payroll-complete.ts  test-payroll-devnet.ts  test-payroll-full-flow.ts  test-payroll-transfer.ts  update-circuit-id.sh
tests/: arcium-e2e.ts  bagel.ts  deposit-verification.ts  employee-leak-audit.ts  payroll.ts  test-e2e-manual.mjs  test-privacy-layers-comprehensive.ts  test-privacy-stack-e2e.ts  test-real-privacy-onchain.mjs  test-simple-verify.mjs  verify-all.ts
