[package]
name = "bagel"
version = "0.1.0"
description = "Simple payroll, private paydays, and a little extra cream cheese"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bagel"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
# Arcium requires idl-build feature for macro-generated client helpers
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]

[dependencies]
# Anchor 0.32.1 (required for Arcium and MagicBlock compatibility)
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
# Pin to Edition 2021 compatible versions (Solana 2.3.13 toolchain)
blake3 = "=1.8.2"
constant_time_eq = "=0.3.1"
# Kamino Lend V2 SDK
kamino-lend = { version = "0.4.1", features = ["cpi"] }
# MagicBlock Ephemeral Rollups SDK
# Program ID: DELeGGvXpWV2fqJUhqcF5ZSYMS4JTLjteaAMARRSaeSh (Delegation Program)
# Devnet RPC: https://devnet.magicblock.app/
ephemeral-rollups-sdk = { version = "0.7.2", features = ["anchor"] }
# Arcium Anchor SDK for MPC computations (v0.6.x aligned with Anchor 0.32.1)
arcium-anchor = { version = "0.6.1", features = ["idl-build"] }
# Arcium client for accessing types directly (needed for Fix 5 - manual trait implementation)
arcium-client = { version = "0.6.1" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
