[package]
name = "bagel"
version = "0.2.0"
description = "Privacy-first payroll on Solana - Lean Bagel Stack"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bagel"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# Anchor 0.31.1 (required for Inco Lightning compatibility)
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }

# Inco Lightning SDK for confidential computation on Solana (Devnet Beta)
# Program ID: 5sjEbPiqgZrYwR31ahR6Uk9wf5awoX61YGg7jExQSwaj
# Documentation: https://docs.inco.org/svm/rust-sdk/overview
inco-lightning = { version = "0.1.4", features = ["cpi"] }

# MagicBlock Ephemeral Rollups SDK
# Program ID: DELeGGvXpWV2fqJUhqcF5ZSYMS4JTLjteaAMARRSaeSh (Delegation Program)
# Devnet RPC: https://devnet.magicblock.app/
ephemeral-rollups-sdk = { version = "0.8.3", features = ["anchor"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
